/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Maggie Perry
 */

package baseline;

public class ToDoList {
}
